<resources>
    <string name="app_name">AprenderSoap</string>
    <string name="txv_usuario">Usuario</string>
    <string name="txv_contrasenia">Contraseña</string>
    <string name="txv_registrase">Registrarse</string>
    <string name="txv_hola">Hola:</string>
    <string name="emptyString" />
    <string name="teclear_nombre">Teclea tu nombre</string>
    <string name="nombre_persona">Nombre</string>
    <string name="teclear_correo_electronico">Correo Electronico</string>
    <string name="introduce_email">Introduce tu Email</string>
    <string name="contrasenia_invalida">Contrasenia Invalida</string>
    <string name="datos_guardados">Datos Guardados</string>
    <string name="title_activity_pantalla_opciones">PantallaOpciones</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="txv_seleccione">Selecciones una opcion</string>
    <string name="temario">Temario para aprender SOAP</string>
    <string name="txv_acerca_de">Acerca de</string>
    <string name="title_activity_acerca_de">AcercaDe</string>
    <string name="txv_objetivo_aplicacion">Esta aplicacion te ayuda a aprender SOAP de una manera facil y dinamica</string>
    <string name="txv_desarrollador_info">Desarrollador: José Manuel Enríquez Cabrera</string>
    <string name="title_activity_temario_curso">TemarioCurso</string>
    <string name="title_activity_selecciona_tema">SeleccionaTema</string>
    <string name="title_activity_modulo_uno">ModuloUno</string>
    <string name="title_activity_game_multi">GameMultiActivity</string>
    <string name="title_activity_main_activity_game">MainActivityGame</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="title_activity_multiplayer">MultiplayerActivity</string>
    <string name="title_activity_scores">ScoresActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_games">Games</string>
    <string name="title_activity_modulo_dos">ModuloDos</string>
    <string name="title_activity_modulo_tres">ModuloTres</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main_videos">MainVideos</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_ayuda">Ayuda</string>
</resources>
