<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_persona"
        android:textSize="10pt"
        android:textColor="@color/negro"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_name"
        android:hint="@string/teclear_nombre"
        android:layout_marginTop="5pt"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teclear_correo_electronico"
        android:textSize="10pt"
        android:layout_marginTop="5pt"
        android:textColor="@color/negro"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_email"
        android:hint="@string/introduce_email"
        android:layout_marginTop="5pt"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Usuario"
        android:textSize="10pt"
        android:layout_marginTop="5pt"
        android:textColor="@color/negro"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_user_name"
        android:hint="Introduce Nombre de Usuario"
        android:layout_marginTop="5pt"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contraseña"
        android:textSize="10pt"
        android:layout_marginTop="5pt"
        android:textColor="@color/negro"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_pass_uno"
        android:inputType="textPassword"
        android:hint="Introduce la Contraseña"
        android:layout_marginTop="5pt"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirmar Contraseña"
        android:textSize="10pt"
        android:layout_marginTop="5pt"
        android:textColor="@color/negro"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_pass_confirmar"
        android:inputType="textPassword"
        android:hint="Confirmar Contraseña"
        android:layout_marginTop="5pt"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registrarse"
        android:id="@+id/btn_registrase"
        android:onClick="onSignUpClick"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_gravity="end"
        android:layout_marginTop="25pt"
        />






</LinearLayout>