<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="utng.edu.mx.aprendersoap.MainActivity"
    android:background="@drawable/fondo2"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="80pt"
        android:layout_height="80pt"
        android:src="@drawable/soap"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_usuario"
        android:textSize="30px"
        android:gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_username"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_contrasenia"
        android:textSize="30px"
        android:gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_password"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="Acceder"
        android:onClick="onButtonClick"
        style="@style/Widget.AppCompat.Button.Colored"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txv_registrase"
        android:id="@+id/btn_signup"
        android:onClick="onButtonClick"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="15dp"
        />



</LinearLayout>
