<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="utng.edu.mx.aprendersoap.PantallaOpciones"
    tools:showIn="@layout/app_bar_pantalla_opciones"
    android:orientation="vertical"
    android:background="@drawable/fondo2"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_seleccione"
        android:textSize="10pt"
        android:textStyle="bold"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temario"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textStyle="bold"
        />
    <ImageButton
        android:layout_width="60pt"
        android:layout_height="40pt"
        android:src="@drawable/temario"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:background="@drawable/temario"
        android:id="@+id/imv_temario"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Redes Sociales"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >
        <ImageButton
            android:layout_width="40pt"
            android:layout_height="40pt"
            android:src="@drawable/youtube1"
            android:id="@+id/imv_youtube"
            android:background="@drawable/youtube1"
            android:scaleType="fitXY"
            android:layout_marginLeft="150pt"
            android:layout_marginTop="20pt"

            />
        <ImageButton
            android:layout_width="40pt"
            android:layout_height="40pt"
            android:src="@drawable/facebook"
            android:scaleType="fitXY"
            android:foregroundGravity="left"
            android:background="@drawable/facebook"
            android:layout_marginTop="20pt"

            />
        <ImageButton
            android:layout_width="40pt"
            android:layout_height="40pt"
            android:src="@drawable/twiter"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:layout_marginLeft="300pt"
            android:layout_marginTop="20pt"
            android:background="@drawable/twiter"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_acerca_de"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20pt"
        android:padding="20dp"

        />
    <ImageButton
        android:layout_width="40pt"
        android:layout_height="40pt"
        android:src="@drawable/acercade"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:layout_marginTop="1pt"
        android:id="@+id/imv_acercade"
        android:background="@drawable/acercade"
        />


</LinearLayout>
